syntax = "proto3"; // 版本声明，使用Protocol Buffers v3版本

package message;

service Register {
  rpc RegisterNode (RegisterRequest) returns (RegisterReply) {}
}

message RegisterRequest {
  string ip = 1;
  string port = 2;
  string hostName = 3;
}

message RegisterReply {
  string state = 1;
  string msg = 2;
  int64 code = 3;
  RegisterRequest data = 4;
}
